discussion/kv_engine/131403/131403_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Rename MB29639TestDeleteWhileSendDataAndFullWriteBuffer

Rename and simplify the thread by removing the extra watchdog
thread (we can monitor the progress and timeout in the same
thread as we delete the bucket).

Change-Id: Ifbc554d6d94c87b83dae87c8d1712baba0d2b6c9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-26 05:34:21.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-26 05:41:13.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28840/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4458/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4390/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4390/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12275/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4551/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4551/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3031/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_bucket.cc:331:18: error: use of undeclared identifier "EXIT_FAILED"; did you mean "ENGINE_FAILED"? [clang-diagnostic-error]
            exit(EXIT_FAILED);
                 ^~~~~~~~~~~
                 ENGINE_FAILED
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:214:5: note: "ENGINE_FAILED" declared here
    ENGINE_FAILED = int(cb::engine_errc::failed),
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3031/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/tests/testapp/testapp_bucket.cc:331:18:
error: use of undeclared identifier "EXIT_FAILED"; did you mean "ENGINE_FAILED"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3031/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3498/ : FAILURE

Compile error at [2020-06-26T05:39:15.298Z] ../kv_engine/tests/testapp/testapp_bucket.cc:331:18:
error: use of undeclared identifier "EXIT_FAILED"; did you mean "ENGINE_FAILED"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3498/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1537/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
